--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Reset default margin and padding */
+/* Default styles */
 body, h1, h2, h3, p, ul {
     margin: 0;
     padding: 0;
@@ -38,7 +38,6 @@ nav ul {
     padding: 0;
     padding-left: 40px; /* Move the navigation menu slightly more to the right */
 }
-
 
 nav ul li {
     margin-right: 20px;
@@ -89,7 +88,7 @@ section p {
 .game-info h3 {
     margin-bottom: 10px;
     font-size: 1.5rem; /* Larger font size */
-    color: #333;
+    color: #333; /* Default color */
 }
 
 .game-info img {
@@ -201,16 +200,4 @@ footer {
     .game-info img {
         border-radius: 5px;
     }
-}
-
-h3 {
-    color: #222; /* Default color for light mode */
-}
-
-body.dark-mode h3 {
-    color: #fff; /* Color for dark mode */
-}
-
-body.light-mode h3 {
-    color: #222;
 }
